{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 21,
  "lineage": "97fa3c7c-c82d-73d8-6a1a-7fa853dd49b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:465480536726:internet-gateway/igw-0b8b416edd36f6bb9",
            "id": "igw-0b8b416edd36f6bb9",
            "owner_id": "465480536726",
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:loadbalancer/app/webapp/2bc615d5aa976081",
            "arn_suffix": "app/webapp/2bc615d5aa976081",
            "dns_name": "webapp-1219725626.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:loadbalancer/app/webapp/2bc615d5aa976081",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp",
            "security_groups": [
              "sg-03d81397f6380072c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069a46589d887e091"
              },
              {
                "subnet_id": "subnet-09031dfca4cff1cd8"
              }
            ],
            "subnets": [
              "subnet-069a46589d887e091",
              "subnet-09031dfca4cff1cd8"
            ],
            "vpc_id": "vpc-0ef0bfe46070a5b6b",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:listener/app/webapp/2bc615d5aa976081/d26ef06eb2a10b26",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:targetgroup/webapp/6cfb7c2be82dfdc9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:listener/app/webapp/2bc615d5aa976081/d26ef06eb2a10b26",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:loadbalancer/app/webapp/2bc615d5aa976081",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp",
            "aws_lb_target_group.webapp",
            "aws_security_group.default",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:targetgroup/webapp/6cfb7c2be82dfdc9",
            "arn_suffix": "targetgroup/webapp/6cfb7c2be82dfdc9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:465480536726:targetgroup/webapp/6cfb7c2be82dfdc9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webapp",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7c33794d1e273fe",
            "original_route_table_id": "rtb-03b4eb07c720be399",
            "route_table_id": "rtb-0a28ed1a2068a2102",
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a28ed1a2068a2102",
            "owner_id": "465480536726",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8b416edd36f6bb9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:465480536726:security-group/sg-03d81397f6380072c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d81397f6380072c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20201221121328734300000002",
            "name_prefix": "",
            "owner_id": "465480536726",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:465480536726:subnet/subnet-09031dfca4cff1cd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-09031dfca4cff1cd8",
            "map_public_ip_on_launch": false,
            "owner_id": "465480536726",
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:465480536726:subnet/subnet-069a46589d887e091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-069a46589d887e091",
            "map_public_ip_on_launch": false,
            "owner_id": "465480536726",
            "vpc_id": "vpc-0ef0bfe46070a5b6b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:465480536726:vpc/vpc-0ef0bfe46070a5b6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8e6b0c6c909bde5",
            "default_route_table_id": "rtb-03b4eb07c720be399",
            "default_security_group_id": "sg-0d793c10c42239644",
            "dhcp_options_id": "dopt-1612ab7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ef0bfe46070a5b6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03b4eb07c720be399",
            "owner_id": "465480536726"
          }
        }
      ]
    }
  ]
}